# ferrum

./: .editorconfig  ANDROID_BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  FIX_COMPLETE.md  FIX_NATIVE_NOT_FOUND.md  Ferrum.sln  INSTALL_ANDROID_NDK.md  INSTALL_NDK_VS2026.md  QUICK_FIX_SUMMARY.md  README.md  check-ndk.bat  install-ndk-standalone.ps1  nuget.config  rebuild-minimaldemo.ps1  set-ndk-path.ps1  setup-android-ndk.ps1
.build/android/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
.build/android/arm64-v8a/dsp_fixture/: cmake_install.cmake
.build/android/arm64-v8a/test_stub/: cmake_install.cmake
.build/android/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
.build/android/armeabi-v7a/dsp_fixture/: cmake_install.cmake
.build/android/armeabi-v7a/test_stub/: cmake_install.cmake
.build/android/x86_64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
.build/android/x86_64/dsp_fixture/: cmake_install.cmake
.build/android/x86_64/test_stub/: cmake_install.cmake
.github/workflows/: codegen-tests.yml  maui-build.yml  native-build.yml
docs/: architecture.md  getting-started.md  open-questions.md
native/: CMakeLists.txt
native/cmake/: ferrum_helpers.cmake  ios.toolchain.cmake
native/dsp_fixture/: CMakeLists.txt
native/dsp_fixture/include/: ferrum_dsp.h
native/dsp_fixture/src/: ferrum_dsp.c
native/scripts/: build_android.sh  build_android_ninja.sh  build_ios.sh
native/test_stub/: CMakeLists.txt
native/test_stub/include/: add.h
native/test_stub/src/: add.c
samples/MinimalDemo/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MinimalDemo.csproj  README.md
samples/MinimalDemo/Interop/: AddInterop.cs
src/Framework/: Ferrum.Framework.csproj
src/Framework.Tests/: Ferrum.Framework.Tests.csproj
src/Framework.Tests/Buffers/: NativeBufferTests.cs
src/Framework.Tests/Codegen/: DspFixtureCodegenTests.cs  HeaderParserTests.cs
src/Framework/Buffers/: NativeBuffer.cs
src/Framework/Interop/: InteropConstants.cs
templates/: Ferrum.Templates.csproj  README.md
templates/maui-ferrum/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  FerrumApp.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md  nuget.config
templates/maui-ferrum/.template.config/: template.json
templates/maui-ferrum/Resources/Styles/: Styles.xaml
tools/codegen/: CodegenException.cs  Ferrum.Codegen.csproj  Program.cs
tools/codegen/Emitter/: BindingEmitter.cs
tools/codegen/Models/: ParsedDeclarations.cs
tools/codegen/Parser/: CTypeMapping.cs  HeaderParser.cs
